# ChangeLog for sys-fs/dmraid
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/dmraid/ChangeLog,v 1.17 2009/08/09 14:23:39 nixnut Exp $

  09 Aug 2009; nixnut <nixnut@gentoo.org> dmraid-1.0.0_rc15.ebuild:
  ppc stable #280080

  27 Apr 2009; Patrick Lauer <patrick@gentoo.org> dmraid-1.0.0_rc15:
  Dep fix for #267154

  27 Apr 2009; Brent Baude <ranger@gentoo.org> dmraid-1.0.0_rc15.ebuild:
  Marking dmraid-1.0.0_rc15 ~ppc for bug 266811

  05 Mar 2009; Ian Stakenvicius (_AxS_) <ian@aerobiology.ca>
  +dmraid-1.0.0_rc14.ebuild, +dmraid-1.0.0_rc15.ebuild,
  +files/dmraid-destdir-fix.patch, +metadata.xml:
  Trivial version bump (bug 251161), updated metadata with current contact info

  25 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  dmraid-1.0.0_rc14.ebuild:
  Marking stable on amd64/x86 for 2008.0's release. We have been using this
  (via genkernel) for quite some time and there are no older stable versions,
  so no regressions.

  09 Nov 2007; Ian Stakenvicius (_AxS_) <ian@syndicated-productions.com>
  dmraid-1.0.0_rc14.ebuild:
  Fixed bug 198522 (file collision with genkernel)


  13 Jun 2007; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  if you commit it, even though it's proxy. you're responsible

  13 Jun 2007; Ian Stakenvicius (_AxS_) <ian@syndicated-productions.com>
  -dmraid-1.0.0_rc13.ebuild:
  version bump: removed v1.0.0_rc13

  13 Jun 2007; Ian Stakenvicius (_AxS_) <ian@syndicated-productions.com>
  dmraid-1.0.0_rc14.ebuild:
  v1.0.0_rc14: Added -j1 to emake to improve emerge consistency on amd64;
  tested with and without MAKEOPTS=-s (bug 164572)

  13 Jun 2007; Ian Stakenvicius (_AxS_) <ian@syndicated-productions.com>
  +dmraid-1.0.0_rc13.ebuild, +dmraid-1.0.0_rc14.ebuild,
  +files/dmraid-destdir-fix.patch, +metadata.xml:
  Trivial version bump

  13 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

*dmraid-1.0.0_rc13 (02 Nov 2006)
