@@ -1,7 +1,7 @@
 AUX dmraid-destdir-fix.patch 902 RMD160 8641454fcab27ff5f122e50cc1cdc4559e484692 SHA1 8dac0fd6d374cbdd490f101817677ac66dfc87ce SHA256 4a275211bd2036ceec2181e1ac1bc4d14d522cb254c81e596af6e1481db1d667
 DIST dmraid-1.0.0.rc14.tar.bz2 164234 RMD160 9cd238a981cfef9c5c1f2f1d6466b70c95ec9c7c SHA1 2b3284db46a995967d88993ae5ae36b57c513bc4 SHA256 a777354d6d69a9b58d84966cc7b37bc3f5c89539f885ad25fd874ed1c388fbec
 DIST dmraid-1.0.0.rc15.tar.bz2 190475 RMD160 045a58855a93082a7758cfedc6f9cd4cfd91668b SHA1 3fa1f184a497fd2cc6cefa4cb2892ffb1ede64bf SHA256 30847258b7f946ed908e79af4058bbf2c9a3791728b8231f7c490ca601566c05
-EBUILD dmraid-1.0.0_rc14.ebuild 2177 RMD160 6010af942e69b33e1c4432a6a08b472aa22d3ca1 SHA1 90518083fc7c34f2997c2f6b8c6a866fead11fd1 SHA256 625ceff3dfb8c24e0dffb5c440aac4df25dd7dea44e500a9dbb5e74546f6183a
+EBUILD dmraid-1.0.0_rc14.ebuild 2209 RMD160 25187ea1c2e8c12187872aff599ab91f25ec93d9 SHA1 b20910b5cfb0b9399f95d0b36ceb46663efdecff SHA256 b49f80a7a583f05815ef501858c5a1df05bab75fd87a83f8e0474f8630447ecd
 EBUILD dmraid-1.0.0_rc15.ebuild 2223 RMD160 69c0ff36a37bf9f683dec8bcdfb74a458f4a2ed8 SHA1 203f1c99bdf68f86aff8a017084d75be71e94346 SHA256 c85c488dc8e0b7455651722e54fe00ec5382cee373af5f198146e75187d50fef
-MISC ChangeLog 3658 RMD160 40714b9bfedf620e3564db659d31ab58ee042839 SHA1 127362be3effeb4fe7465c7f9351cbb9d336bce9 SHA256 42e797a31725aca16c89c68de05416d8d573f8c5911d78baf7a64396677c2cf7
+MISC ChangeLog 3800 RMD160 e5e783fde3f19970fb65acf818491c3df644e06c SHA1 c3266ff4294edb6e9f215c92b9be77afb2eb8fa2 SHA256 99422576ca3557fe8ea4a5a72baaf2a34de539b5e4ec769beab8254cbda5855c
 MISC metadata.xml 479 RMD160 f8f87fe9d61a0765e733ceb9a8fbf64baafe75f6 SHA1 3cef4c529760bece235360f92c2492b147210a09 SHA256 1896db02215d0604a855bcb58d442124ccecf6df5d8528166398d55793bf7d6f
