@@ -1,6 +1,10 @@
 # ChangeLog for sys-fs/dmraid
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/dmraid/ChangeLog,v 1.17 2009/08/09 14:23:39 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/dmraid/ChangeLog,v 1.18 2009/09/08 14:17:37 ssuominen Exp $
+
+  08 Sep 2009; Samuli Suominen <ssuominen@gentoo.org>
+  dmraid-1.0.0_rc14.ebuild:
+  Copy lvm2 vs. device-mapper deps from _rc15 to _rc14.
 
   09 Aug 2009; nixnut <nixnut@gentoo.org> dmraid-1.0.0_rc15.ebuild:
   ppc stable #280080
